<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_add_to_home_screen_24"/>
    <item
        android:id="@+id/nav_politics"
        android:title="@string/politics"
        android:icon="@drawable/ic_politics"/>
    <item
        android:id="@+id/nav_news"
        android:title="@string/news"
        android:icon="@drawable/ic_baseline_business_24"/>
    <item
        android:id="@+id/nav_bio"
        android:title="@string/bio"
        android:icon="@drawable/ic_baseline_format_bold_24"/>
    <item
        android:id="@+id/nav_vid"
        android:title="@string/video"
        android:icon="@drawable/ic_video"/>
    <item
        android:id="@+id/nav_share"
        android:title="@string/share"
        android:icon="@drawable/ic_baseline_share_24"/>
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        android:icon="@drawable/ic_exit"/>

</menu>