<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="185dp"
    android:gravity="center_vertical"
    android:background="@color/colorPrimary"
    android:id="@+id/navigation_header">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/contentDescription"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_marginStart="16dp"
        android:text="@string/website"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white"
        android:fontFamily="serif-monospace"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>